MDEV-297: SHOW EXPLAIN: Server gets stuck until timeout occurs while executing SHOW    INDEX and SHOW EXPLAIN in parallel - Rework locking code to use the LOCK_thd_data mutex for all synchronization. This also   fixed MDEV-301.